add primary image

--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
+.form-container
+{
+  display: flex;
+  align-items: center;
+}
+
+.taille-form
+{
+  width: 100%;
+  height: auto;
+}
+
 .button-container
 {
   display: flex;
@@ -5,14 +17,33 @@
   flex-direction: column;
 }
 
+.button-container button:hover
+{
+  background-color: lightgray;
+}
+
+.formateur
+{
+  background-color: white;
+}
+
 .sign-in
 {
-   align-self: flex-end;
+  align-self: flex-end;
+  background-color: white;
+  border: solid 1px;
 }
 
 .sign-up
 {
-   align-self: flex-start;
+  align-self: flex-start;
+  background-color: red;
+  color: white;
+}
+
+.sign-up:hover
+{
+  background-color: darkred !important;
 }
 
 .shopping
@@ -20,4 +51,21 @@
   align-self: center;
   border-radius: 50%;
   background-color: white;
+}
+
+.foot-image
+{
+  display: flex;
+  align-items: center;
+  height: 60vh;
+  background-image: url(images/42c7fc6c-ada8-41fa-ac3d-df89623ca315.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  top: 0px;
+}
+
+.foot-text h1, .foot-text h2
+{
+  color: white;
 }
