--- a/style.css
+++ b/style.css
@@ -93,3 +93,47 @@
 {
   font-size: 3em;
 }
+
+.section
+{
+  height: 30vh;
+  padding: 20px;
+  display: flex;
+  flex-wrap: nowrap;
+}
+
+.card
+{
+  height: 100%;
+  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14),0 3px 1px -2px rgba(0,0,0,0.12),0 1px 5px 0 rgba(0,0,0,0.2);
+}
+
+.card:hover
+{
+  box-shadow: 0 6px 6px 0 rgba(0,0,0,0.14),0 9px 3px -6px rgba(0,0,0,0.12),0 3px 15px 0 rgba(0,0,0,0.2);
+}
+
+.card-image
+{
+  height: 40%;
+  background-image: url(images/258316_55e9_6.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.card:hover .card-image
+{
+  box-shadow: inset 0 0 0 100px rgba(0,0,0,.5);
+}
+
+.card-text
+{
+  display: flex;
+  flex-direction: column;
+  padding: 5px;
+}
+
+.card-text p:nth-of-type(2)
+{
+  align-self: flex-end;
+}
